<resources>
    <string name="app_name">Cocobies</string>
    <string name="title_activity_homepage">Cocobies</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_Upadtes">Add updates</string>
    <string name="menu_machinery">Machinery</string>
    <string name="menu_product">Product</string>
    <string name="menu_production">Production process</string>
    <string name="menu_handcraft">Handicraft</string>
    <string name="menu_nursery">Nurseries</string>
    <string name="menu_Guidance">Guidance</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_itembycategory">Itembycategory</string>
</resources>
